autogenerate cluster api error functions
